2015-08-01 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Renamed d2u_printf() to d2u_fprintf().
	* common.c: Fix d2u_fprintf() to work correctly when Native Language
	  Support is enabled.
	* common.c: New function d2u_ansi_fprintf() to redirect also non-Unicode
	  messages to d2u_fprintf(), to have consistent output.
	* *.c: Replace all fprintf() with d2u_fprintf() or d2u_ansi_fprintf().
	* man/man1/dos2unix.pod: Added a new section "Unicode file names on Windows".

2015-07-29 Erwin Waterlander <waterlan@xs4all.nl>
	* INSTALL.txt: Updated with information about Unicode file name
	  support on Windows.
	* po/*.po: Included several translation updates. See README.txt.
	* test/test.bat: Renamed to test/testcmd.bat.
	* test/testps8.ps1: PowerShell script in UTF-8 format using Unicode file names.
	* test/testps16.ps1: PowerShell script in UTF-16 format using Unicode file names.

2015-07-23 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: glob_warg(): Check for malloc/realloc errors.
	* dos2unix.c, unix2dos.c: Check for malloc errors.

2015-07-20 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: print_bom(). Fix split message for translators.

2015-07-18 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: d2u_printf(). Use wprintf to print UTF-8.
	  MinGW-w64 g++ (4.9.2) had some problems printing UTF-8. After first
	  UTF-8 file name was printed the rest of UTF-8 was printed blank.
	  This problem was in Windows Console. The problem was not there in
	  ConEmu. MSVC (2013) does not have this problem. Using gcc and wprintf
	  is OK in Windows Console and ConEmu.
	* mingw*.mak: Switch back to use gcc always.
	* common.c: Fix messages ending with space, for translators.

2015-07-12 Erwin Waterlander <waterlan@xs4all.nl>
	* vc.mak: Enable Unicode file names.
	* common.c: Check output of WideCharToMultiByte and MultiByteToWideChar.
	* common.c: Fixed a problem in glob_warg().
	* mingw*.mak: Use g++ only when UNIFILE==1.